--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,12 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+        
+    - name: download Artifact
+      uses: actions/download-artifact@v4
+      with:
+        path: ./artifacts
+
+    - name: view hello.txt
+      run: cat ./artifacts/hello.txt
+
