--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -22,11 +22,11 @@ jobs:
     - name: download Artifact
       uses: actions/download-artifact@v4
       with:
-        name: hello.txt
         path: ./artifacts
 
     - name: view hello.txt
-      run: cat ./artifacts/hello.txt
+      run: cat ./artifacts/hello-artifact
+
 
 
 
