--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -21,6 +21,7 @@ jobs:
 
   download:
      runs-on: ubuntu-latest
+     needs: build
 
      steps:
        - name: download Artifact
@@ -30,6 +31,7 @@ jobs:
   
        - name: view hello.txt
          run: cat ./artifacts/hello-artifact/hello.txt
+
 
 
 
