--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -24,13 +24,14 @@ jobs:
      needs: build
 
      steps:
-       - name: download Artifact
+       - name: Download text file
          uses: actions/download-artifact@v4
          with:
             path: ./artifacts
   
-       - name: view hello.txt
+       - name: Display content of the text file
          run: cat ./artifacts/hello-artifact/hello.txt
+
 
 
 
